revert back to verifying uniqueness of user email

--- a/user.yml
+++ b/user.yml
@@ -169,8 +169,7 @@ enter_credentials:
     - first_name
     - last_name
     - cellphone
-    - email
-    # - email: { valid: [unique(user.email_address)] }
+    - email: { valid: [unique(user.email_address)] }
     - type: password_input
     - password
     - confirm_password
