allow redirect target from backend

--- a/fields.yml
+++ b/fields.yml
@@ -252,6 +252,9 @@ query:
   type: button
   call: $class::$invoker($key)
 
+redirect:
+  type: link
+  
 register:
   desc: Click here to register
   access: public
