added new validator alphaspace which caters for two+ worded name eg cape town and van rensberg

--- a/validators.yml
+++ b/validators.yml
@@ -7,6 +7,8 @@ after_period:
 
 alphabetic: must_be([a-zA-Z]+,alphabetic)
 
+alphaspace: must_be([a-zA-Z ]+,alphaspace)
+
 at_least:
   valid: /^.{$1,}$/
   2: characters
