--- a/validators.yml
+++ b/validators.yml
@@ -14,6 +14,11 @@ at_least:
   2: characters
   error: $name must be at least $1 $2
 
+at_most:
+  valid: /^.{0,$1}$/
+  2: characters
+  error: $name must be at most $1 $2
+
 before_period:
   3: now()
   valid: sql(select timestampdiff($2,'$value',$3) < '$1')
