--- a/fields.yml
+++ b/fields.yml
@@ -145,6 +145,11 @@ forgot_password:
   desc: Click here if you have forgotten your password and you need to reset it
   url: /password_changer/forgot
 
+full_name:
+  desc: Full name and surname
+  question: What is your full name? Please specify first name and surname
+  valid:
+    - full_name
 goto:
   action: $page.html
 
@@ -156,6 +161,7 @@ id:
 
 id_no:
   name: ID Number
+  question: Please enter your South Africa Identity Number
   desc: Valid South African ID number
   valid:
     - za_id
