fixed registration, forgot password and change password

--- a/password_changer.yml
+++ b/password_changer.yml
@@ -1,5 +1,26 @@
 ## YAML Template.
 ---
+begin:
+  type: wizard_page
+  desc: |
+    The system is going to send you a One Time Pin (OTP) to verify that you are
+    not a robot. Please enter this OTP in the following screen to start changing
+    your password.
+  post:
+    - sql_values: select email_address email, first_name, last_name from user where id = '$uid'
+    - write_session: email,first_name,last_name
+    - clear_values
+
+change:
+  name: Change Password
+  type: wizard
+  width: 600
+  height: 400
+  steps:
+    - begin
+    - check_otp: { url: /user/check_otp }
+    - update_password
+
 forgot:
   name: Forgot Password
   desc: Reset your password
@@ -9,55 +30,36 @@ forgot:
   steps:
     - enter_email
     - check_otp: { url: /user/check_otp }
-    - change
+    - update_password
 
 enter_email:
   name: Start Changing Password
   desc: >
-    Enter the email you used to register on the system below to start 
+    Enter the email you used to register on the system below to start
     changing your password
-  type: labelled_input_page
+  type: wizard_page
   inputs:
-    - email
-  actions:
-    - next:
-        post: 
-          - write_session: email
-          - sql_values: select first_name, last_name from user where email_address = '$email'
-          - send_email: { subject: test me }
-          - clear_values
+    - email: { valid: in(user.email_address) }
+  next:
+    post:
+      - write_session: email
 
-change:
-  type: labelled_input_page
+update_password:
+  type: wizard_page
   width: 700
   name: Change Password
-  desc: 
-    Please enter your new password and type it again to confirm it.
+  desc: Please enter your new password and type it again to confirm it.
   inputs:
     - type: password_input
     - password
     - confirm_password
-  actions:
-    - next:
-        post:
-          - sql_exec: >
-              update user set password = password('$password') 
-              where email_address = '$email'
-          - close_dialog: Password has been changed successfully
-  
-
-email:
-  valid: in(user.email_address)
-
-
-send_email:
-  subject: One Time Password
-  from: $support
-  to: $first_name $last_name <$email>
-  message: >
-    Good day<br><br>
-    You are currently trying to change your email address. 
-    If you have not requested this, please inform the System Adminstrator.<br><br>
-    Your One Time Password is : <b>$otp</b>. <br><br>
-    Regards<br>
-    Customer Operations
+  navigate: [ update_password ]
+  post:
+    - read_session: email
+    - sql_exec: >
+        update user set password = password('$password')
+        where email_address = '$email'
+    - sql_values: select id uid from user where email_address = '$email'
+    - write_session: uid
+    - close_dialog: Password has been changed successfully
+  audit: $email
