--- a/user.yml
+++ b/user.yml
@@ -169,20 +169,7 @@ enter_credentials:
     - confirm_password
   next:
     post:
-      - sql_values: select lpad(floor(rand()*9999),4,'0') server_otp, now() time_of_otp
-      - write_session: server_otp,time_of_otp,title,first_name,last_name,cellphone,email,password
-      - send_email:
-          subject: One Time Password
-          from: $support
-          to: $first_name $last_name <$email>
-          message: >
-            Good day<br><br>
-            Below is your one time password, required to continue with your application.<br><br>
-            Your One Time Password is : <b>$server_otp</b>. <br><br>
-            Regards<br>
-            Customer Operations
-      - clear_values
-
+      - write_session: first_name,last_name,cellphone,email,password
 
 history:
   access: [admin]
