allow registration to be extensible with custom fields

--- a/password_changer.yml
+++ b/password_changer.yml
@@ -18,7 +18,7 @@ change:
   height: 400
   steps:
     - begin
-    - check_otp: { url: /user/check_otp }
+    - check_otp: { url: /user/check_otp, clear: true }
     - update_password
 
 forgot:
@@ -29,7 +29,7 @@ forgot:
   type: wizard
   steps:
     - enter_email
-    - check_otp: { url: /user/check_otp }
+    - check_otp: { url: /user/check_otp, clear: true }
     - update_password
 
 enter_email:
@@ -61,5 +61,6 @@ update_password:
         where email_address = '$email'
     - sql_values: select id uid from user where email_address = '$email'
     - write_session: uid
+    - clear_values
     - close_dialog: Password has been changed successfully
   audit: $email
