started migrating from user to user and person

--- a/fields.yml
+++ b/fields.yml
@@ -192,7 +192,7 @@ logout:
   action: post
   post:
     - read_session: email
-    - sql_exec: insert into audit_trail(user_id,action,detail) values($uid,'Logout','$email')
+    - sql_exec: insert into audit_trail(user,action,detail) values($uid,'Logout','$email')
     - call: session_destroy()
     - redirect: /home
 
@@ -243,6 +243,12 @@ mukoni_logo:
     type: image
     src: mukoni.png
     url: http://www.mukoni.co.za
+
+my_audit_trail:
+  desc: My audit trail
+  access: reg
+  url: /user/my_audit_trail
+
 
 next:
   call: ""
@@ -306,6 +312,11 @@ twitter:
   src: /twitter.png
   url: https://twitter.com
 
+users:
+  access: admin
+  desc: List all the users
+  url: /user/list
+
 validator:
   action: post
   validate: all
@@ -330,6 +341,11 @@ weekday:
     - Thursday
     - Friday
     - Saturday
+
+welcome:
+  name: ""
+  access: reg
+  url: /user/profile
 
 wizard_post:
   type: button
